[gd_scene load_steps=18 format=2]

[ext_resource path="res://scene/gui/NewFilterDialog.tscn" type="PackedScene" id=1]
[ext_resource path="res://scene/global/UICanvas.gd" type="Script" id=2]
[ext_resource path="res://scene/gui/NodePopup.tscn" type="PackedScene" id=3]
[ext_resource path="res://scene/gui/EnterSampleDialog.tscn" type="PackedScene" id=4]
[ext_resource path="res://scene/gui/MsgBoxDialog.tscn" type="PackedScene" id=5]
[ext_resource path="res://scene/gui/SampleEditorDialog.tscn" type="PackedScene" id=6]
[ext_resource path="res://scene/gui/SetColorDialog.tscn" type="PackedScene" id=7]
[ext_resource path="res://scene/gui/LoadCSVDialog.tscn" type="PackedScene" id=8]
[ext_resource path="res://scene/gui/CsvDelimDialog.tscn" type="PackedScene" id=9]
[ext_resource path="res://font/hud-font.tres" type="DynamicFont" id=10]
[ext_resource path="res://scene/gui/RandomSampleColorDialog.tscn" type="PackedScene" id=11]
[ext_resource path="res://scene/gui/FilterSamplesDialog.tscn" type="PackedScene" id=12]
[ext_resource path="res://theme/theme_gray.tres" type="Theme" id=13]
[ext_resource path="res://scene/gui/ConfusionMatrixDialog.tscn" type="PackedScene" id=14]
[ext_resource path="res://scene/gui/SelectTargetAttribDialog.tscn" type="PackedScene" id=15]
[ext_resource path="res://scene/gui/TreeScalingDialog.tscn" type="PackedScene" id=16]
[ext_resource path="res://scene/gui/AutoSampleColorDialog.tscn" type="PackedScene" id=17]

[node name="UICanvas" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="BackgroundColor" type="ColorRect" parent="BackgroundLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUDMargin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
mouse_filter = 2
theme = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HUDMargin"]
margin_right = 1260.0
margin_bottom = 700.0
mouse_filter = 2

[node name="TopBtnBar" type="HBoxContainer" parent="HUDMargin/VBoxContainer"]
margin_right = 1260.0
margin_bottom = 27.0

[node name="LoadTreeFileBtn" type="Button" parent="HUDMargin/VBoxContainer/TopBtnBar"]
margin_right = 140.0
margin_bottom = 27.0
focus_mode = 0
enabled_focus_mode = 0
text = "Load Tree File"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TreeScalingBtn" type="Button" parent="HUDMargin/VBoxContainer/TopBtnBar"]
margin_left = 144.0
margin_right = 267.0
margin_bottom = 27.0
focus_mode = 0
enabled_focus_mode = 0
text = "Tree Scaling"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SplineModeBtn" type="Button" parent="HUDMargin/VBoxContainer/TopBtnBar"]
margin_left = 271.0
margin_right = 506.0
margin_bottom = 27.0
focus_mode = 0
disabled = true
enabled_focus_mode = 0
text = "Switch to Advanced View"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AdvLeafColorsCheckbox" type="CheckBox" parent="HUDMargin/VBoxContainer/TopBtnBar"]
visible = false
margin_left = 510.0
margin_right = 682.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Leaf Colors Only"

[node name="CenterPadding" type="Control" parent="HUDMargin/VBoxContainer/TopBtnBar"]
margin_left = 510.0
margin_right = 815.0
margin_bottom = 27.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="ShowSampleBtn" type="Button" parent="HUDMargin/VBoxContainer/TopBtnBar"]
margin_left = 819.0
margin_right = 966.0
margin_bottom = 27.0
focus_mode = 0
disabled = true
enabled_focus_mode = 0
text = "Samples Editor"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowFiltersBtn" type="Button" parent="HUDMargin/VBoxContainer/TopBtnBar"]
margin_left = 970.0
margin_right = 1094.0
margin_bottom = 27.0
focus_mode = 0
disabled = true
enabled_focus_mode = 0
text = "Filters Editor"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowConfusionMatrixBtn" type="Button" parent="HUDMargin/VBoxContainer/TopBtnBar"]
margin_left = 1098.0
margin_right = 1260.0
margin_bottom = 27.0
focus_mode = 0
disabled = true
enabled_focus_mode = 0
text = "Confusion Matrix"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterPadding" type="Control" parent="HUDMargin/VBoxContainer"]
margin_top = 31.0
margin_right = 1260.0
margin_bottom = 669.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BottomBtnBar" type="HBoxContainer" parent="HUDMargin/VBoxContainer"]
margin_top = 673.0
margin_right = 1260.0
margin_bottom = 700.0
mouse_filter = 2

[node name="Label" type="Label" parent="HUDMargin/VBoxContainer/BottomBtnBar"]
margin_top = 4.0
margin_right = 168.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Background Color: "

[node name="BackgroundColorPicker" type="ColorPickerButton" parent="HUDMargin/VBoxContainer/BottomBtnBar"]
margin_left = 172.0
margin_right = 232.0
margin_bottom = 27.0
rect_min_size = Vector2( 60, 0 )
color = Color( 1, 1, 1, 1 )

[node name="VSeparator2" type="VSeparator" parent="HUDMargin/VBoxContainer/BottomBtnBar"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 236.0
margin_right = 250.0
margin_bottom = 27.0
rect_min_size = Vector2( 14, 0 )

[node name="Label2" type="Label" parent="HUDMargin/VBoxContainer/BottomBtnBar"]
margin_left = 254.0
margin_top = 4.0
margin_right = 362.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Node Color: "

[node name="NodeColorPicker" type="ColorPickerButton" parent="HUDMargin/VBoxContainer/BottomBtnBar"]
margin_left = 366.0
margin_right = 426.0
margin_bottom = 27.0
rect_min_size = Vector2( 60, 0 )
color = Color( 0.784314, 0.784314, 0.784314, 1 )

[node name="VSeparator3" type="VSeparator" parent="HUDMargin/VBoxContainer/BottomBtnBar"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 430.0
margin_right = 444.0
margin_bottom = 27.0
rect_min_size = Vector2( 14, 0 )

[node name="Label3" type="Label" parent="HUDMargin/VBoxContainer/BottomBtnBar"]
margin_left = 448.0
margin_top = 4.0
margin_right = 573.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Branch Color: "

[node name="BranchColorPicker" type="ColorPickerButton" parent="HUDMargin/VBoxContainer/BottomBtnBar"]
margin_left = 577.0
margin_right = 637.0
margin_bottom = 27.0
rect_min_size = Vector2( 60, 0 )

[node name="CenterPadding" type="Control" parent="HUDMargin/VBoxContainer/BottomBtnBar"]
margin_left = 641.0
margin_right = 759.0
margin_bottom = 27.0
size_flags_horizontal = 3

[node name="Label4" type="Label" parent="HUDMargin/VBoxContainer/BottomBtnBar"]
margin_left = 763.0
margin_top = 4.0
margin_right = 867.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Resolution: "

[node name="720pBtn" type="Button" parent="HUDMargin/VBoxContainer/BottomBtnBar"]
margin_left = 871.0
margin_right = 927.0
margin_bottom = 27.0
focus_mode = 0
enabled_focus_mode = 0
text = "720p"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1080pBtn" type="Button" parent="HUDMargin/VBoxContainer/BottomBtnBar"]
margin_left = 931.0
margin_right = 998.0
margin_bottom = 27.0
focus_mode = 0
enabled_focus_mode = 0
text = "1080p"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1440pBtn" type="Button" parent="HUDMargin/VBoxContainer/BottomBtnBar"]
margin_left = 1002.0
margin_right = 1069.0
margin_bottom = 27.0
focus_mode = 0
enabled_focus_mode = 0
text = "1440p"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="HUDMargin/VBoxContainer/BottomBtnBar"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 1073.0
margin_right = 1087.0
margin_bottom = 27.0
rect_min_size = Vector2( 14, 0 )

[node name="ToggleFullscreenBtn" type="Button" parent="HUDMargin/VBoxContainer/BottomBtnBar"]
margin_left = 1091.0
margin_right = 1260.0
margin_bottom = 27.0
focus_mode = 0
enabled_focus_mode = 0
text = "Toggle Fullscreen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TreeFileDialog" type="FileDialog" parent="."]
margin_right = 1000.0
margin_bottom = 600.0
rect_min_size = Vector2( 1000, 600 )
theme = ExtResource( 13 )
popup_exclusive = true
window_title = "Open a File"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.json ; JSON Tree File" )
current_dir = "/Users/Coder/OneDrive/Documents/CS 556 Data Mining/Project/godot-dt-version2"
current_path = "/Users/Coder/OneDrive/Documents/CS 556 Data Mining/Project/godot-dt-version2/"

[node name="CSVFileDialog" type="FileDialog" parent="."]
rect_min_size = Vector2( 1000, 600 )
theme = ExtResource( 13 )
popup_exclusive = true
window_title = "Open a File"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.csv ; Comma Separated Values", " *.txt ; Tab Separated Values" )
current_dir = "/Users/Coder/OneDrive/Documents/CS 556 Data Mining/Project/godot-dt-version2"
current_path = "/Users/Coder/OneDrive/Documents/CS 556 Data Mining/Project/godot-dt-version2/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TreeScalingDialog" parent="." instance=ExtResource( 16 )]

[node name="ConfusionMatrixDialog" parent="." instance=ExtResource( 14 )]
visible = false

[node name="NodePopup" parent="." instance=ExtResource( 3 )]
visible = false

[node name="SampleEditorDialog" parent="." instance=ExtResource( 6 )]

[node name="EnterSampleDialog" parent="." instance=ExtResource( 4 )]
margin_left = 13.2142
margin_top = 120.816
margin_right = 313.214
margin_bottom = 420.816

[node name="CsvDelimDialog" parent="." instance=ExtResource( 9 )]

[node name="LoadCSVDialog" parent="." instance=ExtResource( 8 )]

[node name="RandomSampleColorDialog" parent="." instance=ExtResource( 11 )]

[node name="AutoColorSampleDialog" parent="." instance=ExtResource( 17 )]
margin_bottom = 350.0

[node name="SetColorDialog" parent="." instance=ExtResource( 7 )]
margin_right = 310.0
margin_bottom = 150.0

[node name="FilterSamplesDialog" parent="." instance=ExtResource( 12 )]

[node name="NewFilterDialog" parent="." instance=ExtResource( 1 )]

[node name="SelectTargetAttribDialog" parent="." instance=ExtResource( 15 )]

[node name="MsgBoxDialog" parent="." instance=ExtResource( 5 )]
margin_left = 413.372
margin_top = 239.342
margin_right = 813.372
margin_bottom = 359.342
[connection signal="pressed" from="HUDMargin/VBoxContainer/TopBtnBar/LoadTreeFileBtn" to="." method="_on_LoadTreeFileBtn_pressed"]
[connection signal="pressed" from="HUDMargin/VBoxContainer/TopBtnBar/TreeScalingBtn" to="." method="_on_TreeScalingBtn_pressed"]
[connection signal="pressed" from="HUDMargin/VBoxContainer/TopBtnBar/SplineModeBtn" to="." method="_on_SplineModeBtn_pressed"]
[connection signal="toggled" from="HUDMargin/VBoxContainer/TopBtnBar/AdvLeafColorsCheckbox" to="." method="_on_AdvLeafColorsCheckbox_toggled"]
[connection signal="pressed" from="HUDMargin/VBoxContainer/TopBtnBar/ShowSampleBtn" to="." method="_on_ShowSampleBtn_pressed"]
[connection signal="pressed" from="HUDMargin/VBoxContainer/TopBtnBar/ShowFiltersBtn" to="." method="_on_ShowFiltersBtn_pressed"]
[connection signal="pressed" from="HUDMargin/VBoxContainer/TopBtnBar/ShowConfusionMatrixBtn" to="." method="_on_ShowConfusionMatrixBtn_pressed"]
[connection signal="color_changed" from="HUDMargin/VBoxContainer/BottomBtnBar/BackgroundColorPicker" to="." method="_on_BackgroundColorPicker_color_changed"]
[connection signal="pressed" from="HUDMargin/VBoxContainer/BottomBtnBar/720pBtn" to="." method="_on_720pBtn_pressed"]
[connection signal="pressed" from="HUDMargin/VBoxContainer/BottomBtnBar/1080pBtn" to="." method="_on_1080pBtn_pressed"]
[connection signal="pressed" from="HUDMargin/VBoxContainer/BottomBtnBar/1440pBtn" to="." method="_on_1440pBtn_pressed"]
[connection signal="pressed" from="HUDMargin/VBoxContainer/BottomBtnBar/ToggleFullscreenBtn" to="." method="_on_ToggleFullscreenBtn_pressed"]
[connection signal="file_selected" from="TreeFileDialog" to="." method="_on_TreeFileDialog_file_selected"]
[connection signal="file_selected" from="CSVFileDialog" to="." method="_on_CSVFileDialog_file_selected"]
[connection signal="confirmed" from="EnterSampleDialog" to="." method="_on_EnterSampleDialog_confirmed"]
[connection signal="confirmed" from="CsvDelimDialog" to="." method="_on_CsvDelimDialog_confirmed"]
[connection signal="confirmed" from="NewFilterDialog" to="." method="_on_NewFilterDialog_confirmed"]
[connection signal="confirmed" from="SelectTargetAttribDialog" to="." method="_on_SelectTargetAttribDialog_confirmed"]
